bug: Attend button is only visible if signed in
Resolves: #29

--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -24,3 +24,13 @@
   position: relative
   text-shadow: 0 -1px 0 mix(#000, #4197da, 10%)
   text-transform: uppercase
+
+// -------------------------------------
+//   Modifiers
+// -------------------------------------
+
+.btn-attend
+  display: none
+
+  .is-signedIn &
+    display: block
